# kan-rust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: main.yml
src/: lib.rs
src/data_structures/: layer.rs  matrix.rs  mod.rs  vector.rs
src/network/: layer.rs  mod.rs  network.rs
src/tests/: layer_tests.rs  matrix_tests.rs  mod.rs  network_tests.rs  vector_tests.rs
src/utils/: activations.rs  is_close_enough.rs  loss_functions.rs  mod.rs
